multiple images, services, handlers, middlewares, settings
	added the openAPI specs for multiple images uploads
	added services, handlers, and queries for the images
	custom settings added for files extensions
